--- a/style.css
+++ b/style.css
@@ -1,12 +1,35 @@
-body{
-    margin-top: 50px;
-    margin-left: 50px;
-    margin-right: 50px;
-    margin-bottom: 100px;
-    background-color: black;
-    color: darkgoldenrod;
+body {
+	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	-webkit-animation: gradient 15s ease infinite;
+	        animation: gradient 15s ease infinite;
+			margin-top: 50px;
+			margin-bottom: 100px;
+			margin-left: 100px;
+			margin-right: 100px;
+			color: ghostwhite;
 }
-.profilepic{
-    margin-top: 0%;
-    border-radius: 30%;
+
+@-webkit-keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
