--- a/style.css
+++ b/style.css
@@ -1,15 +1,25 @@
 body {
-	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-	background-size: 400% 400%;
-	-webkit-animation: gradient 15s ease infinite;
-	        animation: gradient 15s ease infinite;
-			margin-top: 50px;
-			margin-bottom: 100px;
-			margin-left: 100px;
-			margin-right: 100px;
-			color: ghostwhite;
+	font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
-
+h1{
+	margin-left:20px;
+}
+h6{
+	margin-left:20px;
+}
+.inner{
+	box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	border-radius: 2%;
+	background-size: 400% 400%;
+	-webkit-animation: gradient 5s ease infinite;
+	        animation: gradient 5s ease infinite;
+	margin-top: 50px;
+	margin-bottom: 100px;
+	margin-left: 100px;
+	margin-right: 100px;
+	
+	
 @-webkit-keyframes gradient {
 	0% {
 		background-position: 0% 50%;
@@ -32,4 +42,14 @@ body {
 	100% {
 		background-position: 0% 50%;
 	}
+}
+}
+.container-fluid mt-3{
+	margin-left: 20px;
+}
+h3{
+	margin-left: 20px;
+}
+img{
+	border-radius: 10%;
 }
